--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 	</div>
 </div>
 <div id="header_images" style="float:right; padding-right: 65px">
-		<!-- <div id="images_cired"><a href="http://www.centre-cired.fr/"><img src="EHESS.eps" width="180" height="80"></a></div>-->
-		<!-- <div id="images_ehess"><a href="http://www.ehess.fr"><img src="cired.eps"></a></div>-->
-		<div id="images_photo"><img src="PersoDassaAntoniaAchacheLow.jpg" width="200" height="150"></div>
+		<!-- <div id="images_cired"><a href="http://www.centre-cired.fr/"><img src="images/EHESS.eps" width="180" height="80"></a></div>-->
+		<!-- <div id="images_ehess"><a href="http://www.ehess.fr"><img src="images/cired.eps"></a></div>-->
+		<div id="images_photo"><img src="images/PersoDassaAntoniaAchacheLow.jpg" width="200" height="150"></div>
 </div>	  	<br class="clearfix" />
       	<br class="clearfix" />
        	<div id="menu">
@@ -71,16 +71,16 @@
 	</div>
 	<div id="gallery">
 		<div id="gallery_title">
-			<div class="gallery_icon"><img src="Raphael_Leblois_Site/img/image_icon.png"></div>
+			<div class="gallery_icon"><img src="images/Raphael_Leblois_Site/img/image_icon.png"></div>
 			<div class="gallery_header">Related Media</div>
 		</div>
 		<br class="clearfix" />
-		<!-- <div class="thumb"><a href="carto_stations_DCNiamey_3_article_v3_2.svg" title="Max Lik"><img src="carto_stations_DCNiamey_3_article_v3_2.png" width="189" height="139" alt="" /></a></div>-->
-		<!-- <div class="thumb"><a href="Synoptiques_rainfall_secteurs.svg" title="Meteorological station installation"><img src="Synoptiques_rainfall_secteurs.png" width="149" height="149" alt="" /></a></div>-->
-		<div class="thumb"><a href="Millet.jpg" title="Millet"><img src="Millet.PNG" width="149" height="149" alt="" /></a></div>
-		<div class="thumb"><a href="Cotton3_ok.png" title="Cotton"><img src="Cotton3_ok.png" width="149" height="149" alt="" /></a></div>
-		<div class="thumb"><a href="Forest3_ok.png" title="Canopy"><img src="Forest3_ok.png" width="149" height="149" alt="" /></a></div>
-		<div class="thumb"><a href="Indonesia_Logging.png" title="Logging in Indonesia"><img src="Indonesia_Logging.png" width="149" height="149" alt="" /></a></div>
+		<!-- <div class="thumb"><a href="carto_stations_DCNiamey_3_article_v3_2.svg" title="Max Lik"><img src="images/carto_stations_DCNiamey_3_article_v3_2.png" width="189" height="139" alt="" /></a></div>-->
+		<!-- <div class="thumb"><a href="Synoptiques_rainfall_secteurs.svg" title="Meteorological station installation"><img src="images/Synoptiques_rainfall_secteurs.png" width="149" height="149" alt="" /></a></div>-->
+		<div class="thumb"><a href="Millet.jpg" title="Millet"><img src="images/Millet.PNG" width="149" height="149" alt="" /></a></div>
+		<div class="thumb"><a href="Cotton3_ok.png" title="Cotton"><img src="images/Cotton3_ok.png" width="149" height="149" alt="" /></a></div>
+		<div class="thumb"><a href="Forest3_ok.png" title="Canopy"><img src="images/Forest3_ok.png" width="149" height="149" alt="" /></a></div>
+		<div class="thumb"><a href="Indonesia_Logging.png" title="Logging in Indonesia"><img src="images/Indonesia_Logging.png" width="149" height="149" alt="" /></a></div>
 	</div>
 	<br class="clearfix" />
 	<div id="backtotop">
@@ -430,11 +430,11 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 			<div class="gallery_header">Related Media</div>
 		</div>
 		<br class="clearfix" />
-		<div class="thumb"><a href="pluviometre_Dogba_3.jpg" title="Basic rain gauge"><img src="pluviometre_Dogba_3.jpg" width="149" height="149" alt="" /></a></div>
-		<div class="thumb"><a href="meteo_7.jpg" title="Meteorological station installation"><img src="meteo_7.jpg" width="149" height="149" alt="" /></a></div>
-		<div class="thumb"><a href="RandomDraw_v3.png" title="Rainfall random draw"><img src="RandomDraw_v3.png" width="149" height="149" alt="" /></a></div>
-		<!--<div class="thumb"><a href="Draw_RB_v2" title="Basis risk random draw"><img src="Draw_RB_v2" width="149" height="149" alt="" /></a></div>-->
-		<div class="thumb"><a href="BrasilDef.png" title="Deforestation in bresil, satellite view"><img src="BrasilDef.png" width="149" height="149" alt="" /></a></div>
+		<div class="thumb"><a href="pluviometre_Dogba_3.jpg" title="Basic rain gauge"><img src="images/pluviometre_Dogba_3.jpg" width="149" height="149" alt="" /></a></div>
+		<div class="thumb"><a href="meteo_7.jpg" title="Meteorological station installation"><img src="images/meteo_7.jpg" width="149" height="149" alt="" /></a></div>
+		<div class="thumb"><a href="RandomDraw_v3.png" title="Rainfall random draw"><img src="images/RandomDraw_v3.png" width="149" height="149" alt="" /></a></div>
+		<!--<div class="thumb"><a href="Draw_RB_v2" title="Basis risk random draw"><img src="images/Draw_RB_v2" width="149" height="149" alt="" /></a></div>-->
+		<div class="thumb"><a href="BrasilDef.png" title="Deforestation in bresil, satellite view"><img src="images/BrasilDef.png" width="149" height="149" alt="" /></a></div>
 	</div>
 <br class="clearfix" />
 <div id="backtotop">
@@ -552,10 +552,10 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 			<div class="gallery_header">Related Media</div>
 		</div>
 		<br class="clearfix" />
-		<div class="thumb"><a href="turtle.JPG" title="Baby sea turtles"><img src="turtle.JPG" width="159" height="149" alt="" /></a></div>
-		<div class="thumb"><a href="fishing_boat.JPG" title="Fishing boat"><img src="fishing_boat.JPG" width="159" height="149" alt="" /></a></div>
-		<div class="thumb"><a href="estuaire.JPG" title="Pemba Island"><img src="estuaire.JPG" width="159" height="149" alt="" /></a></div>
-		<div class="thumb"><a href="fishing_nets.JPG" title="Fishing nets in Pemba"><img src="fishing_nets.JPG" width="159" height="149" alt="" /></a></div>
+		<div class="thumb"><a href="turtle.JPG" title="Baby sea turtles"><img src="images/turtle.JPG" width="159" height="149" alt="" /></a></div>
+		<div class="thumb"><a href="fishing_boat.JPG" title="Fishing boat"><img src="images/fishing_boat.JPG" width="159" height="149" alt="" /></a></div>
+		<div class="thumb"><a href="estuaire.JPG" title="Pemba Island"><img src="images/estuaire.JPG" width="159" height="149" alt="" /></a></div>
+		<div class="thumb"><a href="fishing_nets.JPG" title="Fishing nets in Pemba"><img src="images/fishing_nets.JPG" width="159" height="149" alt="" /></a></div>
 	</div>
 	</div>
 	
@@ -765,10 +765,10 @@ Open access and usefull <a href="http://antoine.leblois.free.fr/HansenPotapovTre
 			<div class="gallery_header">Data links</div>
 		</div>
 		<br class="clearfix" />
-		<div class="thumb"><a href="http://visibleearth.nasa.gov/view.php?id=55167" title="Night lights"><img src="NightLightsEU.png" width="149" height="149" alt="" /></a></div>
-<div class="thumb"><a href="http://a.tiles.mapbox.com/v3/villeda.simard-forests.html#3.00/14.32/15.33" title="Forests"><img src="ForestH.png" width="149" height="149" alt=""/></a></div>
-		<div class="thumb"><a href="http://fapar.jrc.ec.europa.eu/WWW/Data/Pages/FAPAR_Download/FAPAR_Download.php#a_dataTable" title="fAPAR, JRC"><img src="fAPAR.png" width="149" height="149" alt="" /></a></div>
-		<div class="thumb"><a href="http://antoine.leblois.free.fr/Defor_Sharepix_2000_2001_2018.gif" title="Deforestation Hansen data"><img src="LowDef_Defor_Sharepix_2000_2001_2018_small.gif" width="169" height="169" alt="" /></a>
+		<div class="thumb"><a href="http://visibleearth.nasa.gov/view.php?id=55167" title="Night lights"><img src="images/NightLightsEU.png" width="149" height="149" alt="" /></a></div>
+<div class="thumb"><a href="http://a.tiles.mapbox.com/v3/villeda.simard-forests.html#3.00/14.32/15.33" title="Forests"><img src="images/ForestH.png" width="149" height="149" alt=""/></a></div>
+		<div class="thumb"><a href="http://fapar.jrc.ec.europa.eu/WWW/Data/Pages/FAPAR_Download/FAPAR_Download.php#a_dataTable" title="fAPAR, JRC"><img src="images/fAPAR.png" width="149" height="149" alt="" /></a></div>
+		<div class="thumb"><a href="http://antoine.leblois.free.fr/Defor_Sharepix_2000_2001_2018.gif" title="Deforestation Hansen data"><img src="images/LowDef_Defor_Sharepix_2000_2001_2018_small.gif" width="169" height="169" alt="" /></a>
 </div>
 	</div>
 <br class="clearfix" />
@@ -861,17 +861,17 @@ Jorge Cabrera Delgado-->
 <a href="http://raphael.leblois.free.fr/"> Raph </a> &nbsp; &nbsp; &nbsp; &nbsp;
 <a href="http://neurophys.biomedicale.univ-paris5.fr/-Arthur-Leblois-.html"> Arthur </a> 
 <br> <br>
-<img src="WoodenHouse.jpg" alt="Erg" style="width:100px;height:100px;"><a href="https://www.editionsparentheses.com/IMG/pdf/p168_101_petites_maisons.pdf"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Olive / 101 petites maisons </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<img src="house.jpg" alt="Erg" style="width:100px;height:100px;">
+<img src="images/WoodenHouse.jpg" alt="Erg" style="width:100px;height:100px;"><a href="https://www.editionsparentheses.com/IMG/pdf/p168_101_petites_maisons.pdf"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Olive / 101 petites maisons </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<img src="images/house.jpg" alt="Erg" style="width:100px;height:100px;">
 <!-- -->
 <br>
-<img src="ToukBarCar.png" alt="Dromadaire" style="width:54px;height:78px;">
+<img src="images/ToukBarCar.png" alt="Dromadaire" style="width:54px;height:78px;">
 <!--http://desert-trip-morocco.com/toukbarcaravane-equipe/-->
-<a href="http://toukbarcaravane.free.fr/"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Salem / randonn&eacutee &eacutequitable ds le d&eacutesert marocain: first link; </a> <img src="Erg2_alg.jpg" alt="Erg" style="width:150px;height:100px;">  <img src="Erg_Chebbi_2.jpg" alt="Erg" style="width:75px;height:100px;">
+<a href="http://toukbarcaravane.free.fr/"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Salem / randonn&eacutee &eacutequitable ds le d&eacutesert marocain: first link; </a> <img src="images/Erg2_alg.jpg" alt="Erg" style="width:150px;height:100px;">  <img src="images/Erg_Chebbi_2.jpg" alt="Erg" style="width:75px;height:100px;">
 </div>
 </p> 
 <br>
-<img src="Erg.png" alt="Erg" style="width:150px;height:58px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://toukbarcaravane.free.fr/">second link </a>
+<img src="images/Erg.png" alt="Erg" style="width:150px;height:58px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://toukbarcaravane.free.fr/">second link </a>
 <br>
 
 
@@ -918,12 +918,12 @@ Bâtiment 26<br>
 		</div>
 <div id="footer_4">
 	    <div id="chirps">
-		<img src="average_month_Cum_rain_WA_CHIRPS.gif" width="215" height="135" alt="">
+		<img src="images/average_month_Cum_rain_WA_CHIRPS.gif" width="215" height="135" alt="">
 		</div>
 </div>
 <div id="footer_right">
 	    <div id="CRUTS3">
-		<img src="CRUTS3_col_morgphing_Speed.gif" width="140" height="160" alt="">
+		<img src="images/CRUTS3_col_morgphing_Speed.gif" width="140" height="160" alt="">
 		</div>	</div>
 		<div id="footer_4">
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  <!--Aug. <a href="http://glcf.umd.edu/"> NDVI </a> (av. 1981-2000)--> Monthly av. cum. rainfall &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  Monthly av. cum. rainfall 
@@ -946,8 +946,8 @@ Bâtiment 26<br>
  <!-- old revolver map ?
  <script src="//rf.revolvermaps.com/0/0/6.js?i=5oe6i05l4m6&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script>-->
  
- <img src="cerisier_judah.jpg" alt="cerisier" style="width:300px;height:200px;">  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-  <img src="amandier_fleur_VG.jpg" alt="amandier" style="width:300px;height:200px;"><br><br>
+ <img src="images/cerisier_judah.jpg" alt="cerisier" style="width:300px;height:200px;">  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+  <img src="images/amandier_fleur_VG.jpg" alt="amandier" style="width:300px;height:200px;"><br><br>
  
  
  <p>Visitor counter:
@@ -1005,7 +1005,7 @@ alt="ClustrMaps is down" title="Locations of visitors to this page" id="clustrMa
  
 <div id="footer_right">
 <div id="MyFlash">
-<img src="MyFlashZ.png" width="100" height="100" alt="">
+<img src="images/MyFlashZ.png" width="100" height="100" alt="">
 </div>
 </div>
 
@@ -1043,7 +1043,7 @@ alt="ClustrMaps is down" title="Locations of visitors to this page" id="clustrMa
 
 <br>
 
- <img src="WarmingStripes_1918_2017_ST_highQuality.png" alt="stripes" style="width:400px;height:300px;"> <br>
+ <img src="images/WarmingStripes_1918_2017_ST_highQuality.png" alt="stripes" style="width:400px;height:300px;"> <br>
  
 Mean global temperature (bottom panel) and CO2 concentration (top panel) increasing from 1880 to 2017. Lower/higher values of temperature and CO2 are represented in blue/red. <br>
 Data: CO2 from scrippsco2-ucsd; Temperature from GHCN and ERSST. <br>
