--- a/index.html
+++ b/index.html
@@ -957,9 +957,12 @@ Bâtiment 26<br>
 
 <br>
 
- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=WTNB7xzKiO-XhxQZaXClditCHjj7ijBsrBIR9TOitlk"></script>
 
-<!-- <a href='https://clustrmaps.com/site/h8vs'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=tt&d=WTNB7xzKiO-XhxQZaXClditCHjj7ijBsrBIR9TOitlk'/></a>-->
+<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=KcKB9X6lqKg9xVFeSODyINq17mIJxX0H4OOSvaH4uok"></script>
+
+<!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=WTNB7xzKiO-XhxQZaXClditCHjj7ijBsrBIR9TOitlk"></script>
+
+ <a href='https://clustrmaps.com/site/h8vs'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=tt&d=WTNB7xzKiO-XhxQZaXClditCHjj7ijBsrBIR9TOitlk'/></a>-->
 
 <a href="https://clustrmaps.com/site/h8vs" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=f59f1d&w=400&t=tt&d=WTNB7xzKiO-XhxQZaXClditCHjj7ijBsrBIR9TOitlk&ct=fff503" /></a>
 
