--- a/index.html
+++ b/index.html
@@ -960,11 +960,13 @@ Bâtiment 26<br>
 
 <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=KcKB9X6lqKg9xVFeSODyINq17mIJxX0H4OOSvaH4uok"></script>
 
+
+<a href="http://www.clustrmaps.com/map/Leblois.github.io" title="Visit tracker for Leblois.github.io"><img src="//www.clustrmaps.com/map_v2.png?d=KcKB9X6lqKg9xVFeSODyINq17mIJxX0H4OOSvaH4uok" /></a>
 <!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=WTNB7xzKiO-XhxQZaXClditCHjj7ijBsrBIR9TOitlk"></script>
 
- <a href='https://clustrmaps.com/site/h8vs'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=tt&d=WTNB7xzKiO-XhxQZaXClditCHjj7ijBsrBIR9TOitlk'/></a>-->
+ <a href='https://clustrmaps.com/site/h8vs'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=tt&d=WTNB7xzKiO-XhxQZaXClditCHjj7ijBsrBIR9TOitlk'/></a>
 
-<a href="https://clustrmaps.com/site/h8vs" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=f59f1d&w=400&t=tt&d=WTNB7xzKiO-XhxQZaXClditCHjj7ijBsrBIR9TOitlk&ct=fff503" /></a>
+<a href="https://clustrmaps.com/site/h8vs" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=f59f1d&w=400&t=tt&d=WTNB7xzKiO-XhxQZaXClditCHjj7ijBsrBIR9TOitlk&ct=fff503" /></a>-->
 
 <!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=s24TbjoUPwt-_Enq7JoHvIxvbYMSu52284UCjUoEaKM"></script>-->
 <!-- <a href="https://clustrmaps.com/site/h8vs" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=WTNB7xzKiO-XhxQZaXClditCHjj7ijBsrBIR9TOitlk"></a>-->
