--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 				<div class="line1"> <b> Tanzanie : comment les aires marines protég\ées transforment l'économie locale sur le long terme</b>,
 				<br> With S. Desbureaux and R. Devillers <i>The conversation / INRAE / IRD le MAG,</i>  (fr) 2024.</div>
 				<div class="line2"> --> <a href="https://www.inrae.fr/actualites/tanzanie-comment-aires-marines-protegees-transforment-leconomie-locale-long-terme">Link to the (INRAE) publication</a> </div>
+				<div class="line2"> --> <a href="https://theconversation.com/en-tanzanie-les-aires-marines-protegees-beneficient-a-leconomie-locale-241669">Link to the (The Conversation) publication</a> </div>
 				<div class="line2"> --> <a href="https://lemag.ird.fr/fr/les-aires-marines-protegees-dopent-le-niveau-de-vie-de-leurs-riverains">Link to the (IRD) publication</a> </div>
 			</div>
 	</div>
