--- a/index.html
+++ b/index.html
@@ -104,12 +104,16 @@
 <br class="clearfix" />
         <div class="row">
 	<div class="row_info">
-<div class="line1"> S. Desbureaux, I. Kabore, G. Vaglietti, M. Baghai, P. Lindsey, A. Robson, P. Delacote and A. Leblois <b> Collaborative management partnerships strongly decreased deforestation in the most at-risk protected areas in Africa since 2000. </b> <i>PNAS</i>, forthcoming<b></b>. <!-- <a href="https://zenodo.org/records/8073692"> Data &amp; replication code. </a>--></div>
-</div>			<!--
+<div class="line1"> S. Desbureaux, I. Kabore, G. Vaglietti, M. Baghai, P. Lindsey, A. Robson, P. Delacote and A. Leblois, 2024 <b> Collaborative management partnerships strongly decreased deforestation in the most at-risk protected areas in Africa since 2000. </b> <i>PNAS</i>, Vol. 122, No. 1<b></b>.  <a href="https://zenodo.org/records/14195855"> Data &amp; replication code. </a></div>
+</div>			
 			<div class="row_download">
-			<div class="download_text">Download</div><div class="french"><a href="https://conbio.onlinelibrary.wiley.com/doi/10.1111/conl.13048">Pre-Print</a></div>
+			<div class="download_text">Link</div><div class="french"><a href="https://www.pnas.org/doi/10.1073/pnas.2411348121">Publication</a></div>
 			</div> 
-			-->
+			<div class="row_download">
+			<div class="download_text"> & </div>
+<div class="french"><a href="http://antoine.leblois.free.fr/CMP_PNAS_Desbureaux_al_2024_Accepted_Version.pdf"> Pre-print</a></div>
+</div>
+			
 		</div>
 		<br>	
 <br class="clearfix" />
