--- a/index.html
+++ b/index.html
@@ -461,6 +461,13 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 		<br> -->
 			<div class="row">
 			<div class="row_info">
+				<div class="line1"> <b> Cogestion des aires protégées par les ONG et les États en Afrique : une réussite pour réduire la déforestation </b> 
+				<br>with S. Desbureaux and P. Delacote, <i>CP, INRAE</i> (fr), 2025.</div>
+				<div class="line2"> --> <a href="https://www.inrae.fr/actualites/cogestion-aires-protegees-ong-etats-afrique-reussite-reduire-deforestation">Link to the publication</a> </div>
+			</div>
+	</div>
+			<div class="row">
+			<div class="row_info">
 				<div class="line1"> <b> Tanzanie : comment les aires marines protég\ées transforment l'économie locale sur le long terme</b>,
 				<br> With S. Desbureaux and R. Devillers <i>The conversation / INRAE / IRD le MAG,</i>  (fr) 2024.</div>
 				<div class="line2"> --> <a href="https://www.inrae.fr/actualites/tanzanie-comment-aires-marines-protegees-transforment-leconomie-locale-long-terme">Link to the (INRAE) publication</a> </div>
