--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
         <div class="row">
 	<div class="row_info">
 <div class="line1"> J. Jacob, A. Leblois, M. Brunette, <!-- (2024) --> <b>An economic analysis of a storage policy after a storm occurrence in forestry</b>,</b> 
-			<i>Environmental Modelling and Assessment</i>, <!-- <b></b>, --> forthcoming. </div>
+			<i>Environmental Modelling and Assessment</i>, <!-- <b></b>, --> 2024. </div>
 			</div>
-			<!--<div class="row_download">
-			<div class="download_text">Download</div><div class="french"><a href="https://www.sciencedirect.com/science/article/pii/S0095069623000372">Paper</a></div>  
-			</div>   -->
+			<div class="row_download">
+			<div class="download_text">Download</div><div class="french"><a href="https://link.springer.com/article/10.1007/s10666-024-10011-z">Publication</a></div>  
+			</div>   
 			<div class="row_download">  
 			<div class="download_text"> <!-- & --> </div>
 <div class="french"><a href="https://beta.u-strasbg.fr/WP/2024/2024-27.pdf"> Pre-print</a></div>
