--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="Antoine Leblois, PhD in Development Economics, Environmental Economics, biodiversity, deforestation, conservation, drought, statistics, impact analysis, index-based insurance, weather, risk aversion, Africa, weather shocks, dry forests, arid, sahel, food, production, agriculture, climate change, flood, impacts, food security, restoration" />
 		<meta name="google-site-verification" content="zNp-fhjUgBrL2rHXEeSk2ff0O_l575gRiVBdIqbIG08" />
 		<link rel="Raphael_Leblois_Site/image_src" href="Raphael_Leblois_Site/images/screenshot.png" />
-		<link type="Raphael_Leblois_Site/image/x-icon" rel="icon" href="apr_favicon.ico" />
+		<link type="Raphael_Leblois_Site/image/x-icon" rel="icon" href="images/apr_favicon.ico" />
 		<link rel="stylesheet" type="text/css" href="Raphael_Leblois_Site/css/raphaelleblois.css" />
 		<link rel="stylesheet" type="text/css" href="Raphael_Leblois_Site/css/jquery.lightbox-0.5.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="Raphael_Leblois_Site/css/reset.css" />
