--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 	        <div class="row">
 			<div class="row_info">
 				<div class="line1"> Leblois. A. and P. Quirion. 2011. <b>Agricultural insurances based on meteorological indices: realizations, methods and research challenges</b>.
-				<i> Meteorological Applications</i>, 20(1), p. 1-9, <a href="AL_WIIReview_2012.pdf"> Chap. 3 of the PhD th. </a> </div>
+				<i> Meteorological Applications</i>, 20(1), p. 1-9, <a href="http://antoine.leblois.free.fr/AL_WIIReview_2012.pdf"> Chap. 3 of the PhD th. </a> </div>
 			</div>
 			<div class="row_download">
 				<div class="download_text"> Download</div><div class="french"><a href="http://onlinelibrary.wiley.com/doi/10.1002/met.303/abstract">Publication</a></div>
@@ -402,7 +402,7 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 			<div class="line1"> A. Leblois, INRA Sciences Sociales (30 ans ISS), No 3-4, oct. 2018 -- <b>Economie de l'environnement, opportunites & obstacles (donnees & pluridisciplinarite)</b></div>
 			</div>
 			<div class="row_download">
-				<div class="download_text"> Download</div><div class="french"><a href="leblois_iss18_3_4_6.pdf">French version</a></div>
+				<div class="download_text"> Download</div><div class="french"><a href="http://antoine.leblois.free.fr/leblois_iss18_3_4_6.pdf">French version</a></div>
 			</div>
 		</div>
 <br>
@@ -668,10 +668,10 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 				<div class="line2"> HDR (habilitation to supervise research in Fr.) manuscript (Montpellier University) </div>
 			</div>
 			<div class="row_download">
-			<div class="download_text">Download</div><div class="french"><a href="Manuscript.pdf">French </a></div>
+			<div class="download_text">Download</div><div class="french"><a href="http://antoine.leblois.free.fr/Manuscript.pdf">French </a></div>
 			</div>
 			<div class="row_download">
-			<div class="download_text">Download</div><div class="french"><a href="HDR.pdf">French</a></div>
+			<div class="download_text">Download</div><div class="french"><a href="http://antoine.leblois.free.fr/HDR.pdf">French</a></div>
 			</div>
 		<div class="row">
 			<div class="row_info">
@@ -685,7 +685,7 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 			<div class="line2"> PhD thesis (EHESS, Paris) </div>
 			</div>
 			<div class="row_download">
-			<div class="download_text">Download</div><div class="french"><a href="These_AL_9.pdf">English (intro / conclusion in French)</a></div>
+			<div class="download_text">Download</div><div class="french"><a href="http://antoine.leblois.free.fr/These_AL_9.pdf">English (intro / conclusion in French)</a></div>
 			</div>
 			</div>
 		<div class="row">
@@ -693,7 +693,7 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 				<div class="line1"> Oral Presentation (in French) </div>
 			</div>
 			<div class="row_download">
-			<div class="download_text">Download</div><div class="french"><a href="ThPresentation_24_11_2012.pdf">French</a></div>
+			<div class="download_text">Download</div><div class="french"><a href="http://antoine.leblois.free.fr/ThPresentation_24_11_2012.pdf">French</a></div>
 		</div>
 		</div>
 		<div class="row">
@@ -701,7 +701,7 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 				<div class="line1"> R&eacutesum&eacute (in French) </div>
 			</div>
 			<div class="row_download">
-			<div class="download_text">Download</div><div class="french"><a href="Resume_These_AL9.pdf">French</a></div>
+			<div class="download_text">Download</div><div class="french"><a href="http://antoine.leblois.free.fr/Resume_These_AL9.pdf">French</a></div>
 		</div>
 		</div>
 		<br>
@@ -711,7 +711,7 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 				<div class="line2">Master Thesis (DEA Macro&eacuteconomie, U. Paris I, 2006).</div>
 			</div>
 			<div class="row_download">
-				<div class="download_text">Download</div><div class="french"><a href="Emplois_CESU_Leblois_2007.pdf">French</a></div>
+				<div class="download_text">Download</div><div class="french"><a href="http://antoine.leblois.free.fr/Emplois_CESU_Leblois_2007.pdf">French</a></div>
 			</div>
 		</div>
 		</p>
