--- a/index.html
+++ b/index.html
@@ -462,8 +462,9 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 			<div class="row">
 			<div class="row_info">
 				<div class="line1"> <b> Cogestion des aires protégées par les ONG et les États en Afrique : une réussite pour réduire la déforestation </b> 
-				<br>with S. Desbureaux and P. Delacote, <i>Libé, CP INRAE</i> (fr), 2025.</div>
-				<div class="line2"> --> <a href="https://www.liberation.fr/environnement/biodiversite/lutte-contre-la-deforestation-en-afrique-quand-le-partenariat-entre-ong-et-etats-se-revele-efficace-20250109_VTXSNEWYMNF33BG5DGMALWIH2Q/">Link to the liberation article</a> </div>
+				<br>with S. Desbureaux and P. Delacote, <i>Libé, RFI, CP INRAE</i> (fr), 2025.</div>
+				<div class="line2"> --> <a href="http://antoine.leblois.free.fr/Liberation.pdf">Link to the liberation article (fr) </a> </div>
+				<div class="line2"> --> <a href="https://www.rfi.fr/fr/podcasts/questions-d-environnement/20250108-aires-prot%C3%A9g%C3%A9es-afrique-jouent-bien-leur-r%C3%B4le-biodiversite-poumons-planete">Link to the RFI article (fr) </a> </div>
 				<div class="line2"> --> <a href="https://www.inrae.fr/actualites/cogestion-aires-protegees-ong-etats-afrique-reussite-reduire-deforestation">Link to the INRAE press release (fr) </a> </div>
 			</div>
 	</div>
