--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 			<div class="download_text">Download</div><div class="french"><a href="https://www.sciencedirect.com/science/article/pii/S0095069623000372">Paper</a></div>  
 			</div>   -->
 			<div class="row_download">  
-			<div class="download_text"> <!-- & --> </div>
-<div class="french"><a href="https://assets-eu.researchsquare.com/files/rs-5078577/v1_covered_9bbc51e8-f0d8-41c7-b021-58dae8132721.pdf"> Pre-print</a></div>
+			<div class="download_text"> <!-- & ancien manuscript post-print (nature) https://assets-eu.researchsquare.com/files/rs-5078577/v1_covered_9bbc51e8-f0d8-41c7-b021-58dae8132721.pdf --> </div>
+<div class="french"><a href="http://antoine.leblois.free.fr/Memoire_NicolasMondolfo_3_2_25.pdf"> Pre-print</a></div>
 			</div>
 		</div>
 	<br> 
@@ -463,7 +463,7 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 			<div class="row_info">
 				<div class="line1"> <b> Cogestion des aires protégées par les ONG et les États en Afrique : une réussite pour réduire la déforestation </b> 
 				<br>with S. Desbureaux and P. Delacote, <i>Libé, RFI, CP INRAE</i> (fr), 2025.</div>
-				<div class="line2"> --> <a href="http://antoine.leblois.free.fr/Liberation.pdf">Link to the liberation article (fr) </a> </div>
+				<div class="line2"> --> <a href="http://antoine.leblois.free.fr/Liberation.pdf">Link to the Liberation article (Libé, fr) </a> </div>
 				<div class="line2"> --> <a href="https://www.rfi.fr/fr/podcasts/questions-d-environnement/20250108-aires-prot%C3%A9g%C3%A9es-afrique-jouent-bien-leur-r%C3%B4le-biodiversite-poumons-planete">Link to the RFI article (fr) </a> </div>
 				<div class="line2"> --> <a href="https://www.inrae.fr/actualites/cogestion-aires-protegees-ong-etats-afrique-reussite-reduire-deforestation">Link to the INRAE press release (fr) </a> </div>
 			</div>
