--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
 		<div class="header_text">Research</div>
 	</div>
 	<div class="content">
-		<p> I am doing development and environmental economics and my PhD has essentially been focused on <!--water resource management,--> the <a href="#cv" class="scroll">adaptation to climate change</a> of the (mainly rainfed) Western African agricultural sector. Then, my research have been oriented towards <a href="http://antoine.leblois.free.fr/Preprint_ALADAL.pdf">land use / forestry</a>, and <a href="http://antoine.leblois.free.fr/Defor_ALJWOD_revision.pdf">deforestation</a> in the tropics. <!--More recently, Generally,--> It now aims at understanding better the interplay between conservation and poverty, <!--as well as the impact of conservation on poverty,--> in <a href="https://iopscience.iop.org/article/10.1088/1748-9326/abdbf0"> terrestrial </a> and <a href="https://hal.science/hal-04363809"> marine ecosystems</a>. <br><br>
+		<p> I specialize in development and environmental economics, with my PhD primarily focusing on the <a href="#cv" class="scroll">adaptation of West Africa's predominantly rainfed agricultural sector to climate change</a>. My research then shifted towards <a href="http://antoine.leblois.free.fr/Preprint_ALADAL.pdf">land use, forestry</a>, and <a href="http://antoine.leblois.free.fr/Defor_ALJWOD_revision.pdf">tropical deforestation</a>. Currently, I aim to better understand the interplay between conservation and poverty in both <a href="https://www.pnas.org/doi/10.1073/pnas.2411348121">terrestrial</a> and <a href="https://hal.science/hal-04363809">marine</a> ecosystems.
+			<!-- I am doing development and environmental economics and my PhD has essentially been focused on 
+			 <--water resource management,-> the <a href="#cv" class="scroll">adaptation to climate change</a> of the (mainly rainfed) Western African agricultural sector. 
+				Then, my research have been oriented towards <a href="http://antoine.leblois.free.fr/Preprint_ALADAL.pdf">land use / forestry</a>, 
+				and <a href="http://antoine.leblois.free.fr/Defor_ALJWOD_revision.pdf">deforestation</a> in the tropics. <--More recently, Generally,-> 
+					It now aims at understanding better the interplay between conservation and poverty, <--as well as the impact of conservation on poverty,-> 
+						in <a href="https://iopscience.iop.org/article/10.1088/1748-9326/abdbf0"> terrestrial </a> and <a href="https://hal.science/hal-04363809"> marine ecosystems</a>.
+				-->  <br><br>
 		</p>
   <h2>  </h2>
 	</div>
