--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 			</div>
 			<div class="row_download">
 			<div class="download_text">Download</div>
-<div class="french"><a href="http://antoine.leblois.free.fr/Defor_ALJWOD_revision.pdf">Post-print</a></div>
+<div class="french"><a href="http://antoine.leblois.free.fr/Defor_ALJWOD_revision.pdf">pre-print</a></div>
 	</div>
 			<div class="row_download">
 			<div class="download_text">&</div>
@@ -284,7 +284,7 @@
         <div class="row">
 	<div class="row_info">
 <div class="line1"> Dragicevic, A., A. Lobianco, A. Leblois, 2016. <b>Forest planning and productivity-risk trade-off through the Markowitz mean-variance model</b>.
-			<i>Forest Policy and Economics</i> 64, p.25-34. -- <a href="http://antoine.leblois.free.fr/Preprint_ALADAL.pdf"> Post Print </a> </div>
+			<i>Forest Policy and Economics</i> 64, p.25-34. -- <a href="http://antoine.leblois.free.fr/Preprint_ALADAL.pdf"> pre-print </a> </div>
 			</div>
 			<div class="row_download">
 			<div class="download_text">Download</div><div class="french"><a href="http://www.sciencedirect.com/science/article/pii/S1389934115300812">Publication</a></div>
@@ -295,7 +295,7 @@
         <div class="row">
 	<div class="row_info">
 <div class="line1"> Kosmowski F., A. Leblois, B. Sultan, 2015. <b>Perceptions of recent rainfall changes in Niger: a comparison between climate-sensitive and non-climate sensitive households</b>.
-			<i>Climatic Change</i>, 135(2), pp 227-241 -- <a href="http://antoine.leblois.free.fr/Climate_changes_perceptions_Observations_Niger_CC_FK_BS_AL.pdf"> Post Print </a></div>
+			<i>Climatic Change</i>, 135(2), pp 227-241 -- <a href="http://antoine.leblois.free.fr/Climate_changes_perceptions_Observations_Niger_CC_FK_BS_AL.pdf"> pre-print </a></div>
 			</div>
 			<div class="row_download">
 			<div class="download_text">Download</div><div class="french"><a href="http://link.springer.com/article/10.1007/s10584-015-1562-4">Publication</a></div>
@@ -306,7 +306,7 @@
         <div class="row">
 	<div class="row_info">
 <div class="line1"> Leblois A., P. Quirion and B. Sultan. 2014. <b>Price vs. weather shock hedging for cash crops: ex ante evaluation for cotton producers in Cameroon</b>.
-			<i>Ecological Economics</i>, 101, pp. 67-80 -- <a href="http://antoine.leblois.free.fr/ALPQBS_2014.pdf">Post Print</a> </div>
+			<i>Ecological Economics</i>, 101, pp. 67-80 -- <a href="http://antoine.leblois.free.fr/ALPQBS_2014.pdf">pre-print</a> </div>
 			</div>
 			<div class="row_download">
 			<div class="download_text">Download</div><div class="french"><a href="http://www.sciencedirect.com/science/article/pii/S0921800914000688">Publication</a></div>
@@ -317,7 +317,7 @@
         <div class="row">
 	<div class="row_info">
 				<div class="line1"> Leblois A., P. Quirion, A. Alhassane and S. Traore. 2014. <b>Weather index insurances: an ex ante evaluation for millet growers in Niger</b>.
-				<i> Environmental and Resource Economics</i>, 57(4), p. 527-551, <a href="WIINiger_10_10_2012.pdf">Post print version</a> </div>
+				<i> Environmental and Resource Economics</i>, 57(4), p. 527-551, <a href="WIINiger_10_10_2012.pdf">pre-print version</a> </div>
 			</div>
 			<div class="row_download">
 				<div class="download_text"> Download</div><div class="french"><a href="http://link.springer.com/article/10.1007%2Fs10640-013-9641-3">Publication</a></div>
@@ -373,7 +373,7 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
         <div class="row">
 	<div class="row_info">
 <div class="line1"> Leblois, A., 2017. <b>Remote-sensing evidence about national deforestation rates in developing countries: what can be learned from the last decade</b>. 
-			<i>Reference Module in Earth Systems and Environmental Sciences</i>, Elsevier, edited by Scott Elias, Global Change section editor : Dominick DellaSala. <a href="http://antoine.leblois.free.fr/Review_defor_fin.pdf"> Post-print </a></div>
+			<i>Reference Module in Earth Systems and Environmental Sciences</i>, Elsevier, edited by Scott Elias, Global Change section editor : Dominick DellaSala. <a href="http://antoine.leblois.free.fr/Review_defor_fin.pdf"> pre-print </a></div>
 			</div>
 			<div class="row_download">
 			<div class="download_text">Download</div><div class="french"><a href="https://www.sciencedirect.com/science/article/pii/B9780124095489108711">Publication</a></div>
@@ -387,7 +387,7 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 				<i> Agronomie Africaine</i>, Num&eacutero sp&eacutecial (6) sur les changements climatiques : p. 95 - 111 </div>
 			</div>
 			<div class="row_download">
-				<div class="download_text"> Download</div><div class="french"><a href="http://antoine.leblois.free.fr/Muller_et_al_Agronomie_africaine_assurance_2013.pdf">Post-print</a></div>
+				<div class="download_text"> Download</div><div class="french"><a href="http://antoine.leblois.free.fr/Muller_et_al_Agronomie_africaine_assurance_2013.pdf">pre-print</a></div>
 			</div>
 		</div>
 <br>
@@ -398,7 +398,7 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 				<i> La m&eacutet&eacuteorologie</i>, S&eacuterie 8, p. 64-72 </div>
 			</div>
 			<div class="row_download">
-				<div class="download_text">Download</div><div class="french"><a href="http://www.gisclimat.fr/sites/default/files/Meteo_2012_SP_64.pdf">Post-print</a></div>
+				<div class="download_text">Download</div><div class="french"><a href="http://www.gisclimat.fr/sites/default/files/Meteo_2012_SP_64.pdf">pre-print</a></div>
 			</div>
 		</div>
 <br>
