--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	</div>
 	<div id="gallery">
 		<div id="gallery_title">
-			<div class="gallery_icon"><img src="images/Raphael_Leblois_Site/img/image_icon.png"></div>
+			<div class="gallery_icon"><img src="Raphael_Leblois_Site/img/image_icon.png"></div>
 			<div class="gallery_header">Related Media</div>
 		</div>
 		<br class="clearfix" />
@@ -111,6 +111,21 @@
 <br class="clearfix" />
         <div class="row">
 	<div class="row_info">
+<div class="line1"> Nicolas Mondolfo, Antoine Leblois, Philippe Delacote, Léa Tardieu, <!-- (2024) --> <b>How urban planning decisions affect environmental inequalities: the case of Traveler sites in France</b>,
+			<!--<i>Environmental Modelling and Assessment</i>,  <b></b>, --> <i>forthcoming</i> in <i>Nature Cities</i>. </div>
+			</div>
+			<!--<div class="row_download">
+			<div class="download_text">Download</div><div class="french"><a href="https://www.sciencedirect.com/science/article/pii/S0095069623000372">Paper</a></div>  
+			</div>   -->
+			<div class="row_download">  
+			<div class="download_text"> <!-- & ancien manuscript post-print (nature) https://assets-eu.researchsquare.com/files/rs-5078577/v1_covered_9bbc51e8-f0d8-41c7-b021-58dae8132721.pdf --> </div>
+<div class="french"><a href="http://antoine.leblois.free.fr/Mondolfo_ALPDLT_Travellers_2025.pdf"> Pre-print</a></div>
+			</div>
+		</div>
+	<br> 
+<br class="clearfix" />
+        <div class="row">
+	<div class="row_info">
 <div class="line1"> S. Desbureaux, I. Kabore, G. Vaglietti, M. Baghai, P. Lindsey, A. Robson, P. Delacote and A. Leblois, 2024 <b> Collaborative management partnerships strongly decreased deforestation in the most at-risk protected areas in Africa since 2000. </b> <i>PNAS</i>, Vol. 122, No. 1<b></b>.  <a href="https://zenodo.org/records/14195855"> Data &amp; replication code. </a></div>
 </div>			
 			<div class="row_download">
@@ -133,22 +148,7 @@
 			</div> 
 			</div>
 		<br>	
-	<br class="clearfix" />
-        <div class="row">
-	<div class="row_info">
-<div class="line1"> Nicolas Mondolfo, Antoine Leblois, Philippe Delacote, Léa Tardieu, <!-- (2024) --> <b>How urban planning decisions affect environmental inequalities: the case of Traveler sites in France</b>,</b> 
-			<!--<i>Environmental Modelling and Assessment</i>,  <b></b>, --> submitted. </div>
-			</div>
-			<!--<div class="row_download">
-			<div class="download_text">Download</div><div class="french"><a href="https://www.sciencedirect.com/science/article/pii/S0095069623000372">Paper</a></div>  
-			</div>   -->
-			<div class="row_download">  
-			<div class="download_text"> <!-- & ancien manuscript post-print (nature) https://assets-eu.researchsquare.com/files/rs-5078577/v1_covered_9bbc51e8-f0d8-41c7-b021-58dae8132721.pdf --> </div>
-<div class="french"><a href="http://antoine.leblois.free.fr/Mondolfo_ALPDLT_Travellers_2025.pdf"> Pre-print</a></div>
-			</div>
-		</div>
-	<br> 
-	<br class="clearfix" />
+<br class="clearfix" />
         <div class="row">
 	<div class="row_info">
 <div class="line1"> J. Jacob, A. Leblois, M. Brunette, <!-- (2024) --> <b>An economic analysis of a storage policy after a storm occurrence in forestry</b>,</b> 
