--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <br class="clearfix" />
         <div class="row">
 	<div class="row_info">
-<div class="line1"> S. Desbureaux, I. Kabore, G. Vaglietti, M. Baghai, P. Lindsey, A. Robson, P. Delacote and A. Leblois, 2024 <b> Collaborative management partnerships strongly decreased deforestation in the most at-risk protected areas in Africa since 2000. </b> <i>PNAS</i>, Vol. 122, No. 1<b></b>.  <a href="https://zenodo.org/records/14195855"> Data &amp; replication code. </a></div>
+<div class="line1"> S. Desbureaux, I. Kabore, G. Vaglietti, M. Baghai, P. Lindsey, A. Robson, P. Delacote and A. Leblois, 2024 <b> Collaborative management partnerships strongly decreased deforestation in the most at-risk protected areas in Africa since 2000, </b> <i>PNAS</i>, Vol. 122, No. 1<b></b>.  <a href="https://zenodo.org/records/14195855"> Data &amp; replication code. </a></div>
 </div>			
 			<div class="row_download">
 			<div class="download_text">Link</div><div class="french"><a href="https://www.pnas.org/doi/10.1073/pnas.2411348121">Publication</a></div>
@@ -141,7 +141,7 @@
 <br class="clearfix" />
         <div class="row">
 	<div class="row_info">
-<div class="line1"> S. Desbureaux, J. Girard, A. Dalongeville, R. Devillers, D. Mouillot, N. Jiddawi, L. Sanchez, L. Velez, L. Mathon, A. Leblois, 2024 <b> The Long-Term Impacts of Marine Protected Areas on Fish Catch and Socio-Economic Development in Tanzania. </b> <i>Conservation Letters</i>, e13048<b></b>. <a href="https://zenodo.org/records/8073692"> Data &amp; replication code. </a></div>
+<div class="line1"> S. Desbureaux, J. Girard, A. Dalongeville, R. Devillers, D. Mouillot, N. Jiddawi, L. Sanchez, L. Velez, L. Mathon, A. Leblois, 2024 <b> The Long-Term Impacts of Marine Protected Areas on Fish Catch and Socio-Economic Development in Tanzania, </b> <i>Conservation Letters</i>, e13048<b></b>. <a href="https://zenodo.org/records/8073692"> Data &amp; replication code. </a></div>
 			</div>
 			<div class="row_download">
 			<div class="download_text">Download</div><div class="french"><a href="https://conbio.onlinelibrary.wiley.com/doi/10.1111/conl.13048">Open Access</a></div>
@@ -151,7 +151,7 @@
 <br class="clearfix" />
         <div class="row">
 	<div class="row_info">
-<div class="line1"> J. Jacob, A. Leblois, M. Brunette, <!-- (2024) --> <b>An economic analysis of a storage policy after a storm occurrence in forestry</b>,</b> 
+<div class="line1"> J. Jacob, A. Leblois, M. Brunette, <!-- (2024) --> <b>An economic analysis of a storage policy after a storm occurrence in forestry</b>,  
 			<i>Environmental Modelling and Assessment</i>, 2024. </div>
 			</div>
 			<div class="row_download">
@@ -166,7 +166,7 @@
 	<br class="clearfix" />
         <div class="row">
 	<div class="row_info">
-<div class="line1"> N. Berman, M. Couttenier, A. Leblois & R. Soubeyran, 2023 <b> Crop prices and deforestation in the tropics. </b> 
+<div class="line1"> N. Berman, M. Couttenier, A. Leblois & R. Soubeyran, 2023 <b> Crop prices and deforestation in the tropics, </b> 
 			<i>Journal of Environmental Economics and Management</i>, <b>199</b>, 102819. <a href="https://zenodo.org/record/7044013"> Data &amp; replication code </a></div>
 			</div>
 			<div class="row_download">
@@ -192,8 +192,8 @@
 <br class="clearfix" />
         <div class="row">
 	<div class="row_info">
-<div class="line1"> A. Leblois, 2021. <b> Mitigating the impact of bad rainy seasons in poor agricultural regions to tackle deforestation </b> 
-			<i>Environmental Research Letters</i>, <b>16</b> 054003. <a href="https://zenodo.org/record/4266325"> Data &amp; replication code </a> </div>
+<div class="line1"> A. Leblois, 2021. <b> Mitigating the impact of bad rainy seasons in poor agricultural regions to tackle deforestation,</b> 
+			<i> Environmental Research Letters</i>, <b>16</b> 054003. <a href="https://zenodo.org/record/4266325"> Data &amp; replication code </a> </div>
 			</div>
 			<div class="row_download">
 			<div class="download_text">Download</div><div class="french"><a href="https://doi.org/10.1088/1748-9326/abdbf0">Paper</a></div>
