--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@
 <br class="clearfix" />
         <div class="row">
 	<div class="row_info">
-<div class="line1"> Nicolas Mondolfo, Antoine Leblois, Philippe Delacote, Léa Tardieu, <!-- (2024) --> <b>How urban planning decisions affect environmental inequalities: the case of Traveler sites in France</b>,
-			<!--<i>Environmental Modelling and Assessment</i>,  <b></b>, --> <i>forthcoming</i> in <i>Nature Cities</i>. </div>
+<div class="line1"> Nicolas Mondolfo, Antoine Leblois, Philippe Delacote, Léa Tardieu, <!-- (2024) --> <b>Urban planning decisions expose Traveller sites to disproportionate environmental burdens</b>,
+			<!--<i>Environmental Modelling and Assessment</i>,  <b></b>, --> 2025, <i>Nature Cities</i>. </div>
 			</div>
 			<!--<div class="row_download">
 			<div class="download_text">Download</div><div class="french"><a href="https://www.sciencedirect.com/science/article/pii/S0095069623000372">Paper</a></div>  
 			</div>   -->
 			<div class="row_download">  
 			<div class="download_text"> <!-- & ancien manuscript post-print (nature) https://assets-eu.researchsquare.com/files/rs-5078577/v1_covered_9bbc51e8-f0d8-41c7-b021-58dae8132721.pdf --> </div>
-<div class="french"><a href="http://antoine.leblois.free.fr/Mondolfo_ALPDLT_Travellers_2025.pdf"> Pre-print</a></div>
+<div class="french"><a href="https://www.nature.com/articles/s44284-025-00307-w"> Publication</a></div>
 			</div>
 		</div>
 	<br> 
@@ -466,6 +466,12 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 		<!--Be aware that titles are (sometimes oddly!) chosen by the publisher
 		<br>
 		<br> -->
+					<div class="row">
+			<div class="row_info">
+				<div class="line1"> <b> Près des autoroutes et des déchetteries : les gens du voyage face aux injustices environnementales </b> <br>with N. Mondolfo, L. Tardieu and P. Delacote, <i>The conversation</i> (fr), 2025.</div>
+				<div class="line2"> --> <a href="https://theconversation.com/pres-des-autoroutes-et-des-dechetteries-les-gens-du-voyage-face-aux-injustices-environnementales-258636">Link to the publication</a> </div>
+			</div>
+	</div>
 			<div class="row">
 			<div class="row_info">
 				<div class="line1"> <b> Cogestion des aires protégées par les ONG et les États en Afrique : une réussite pour réduire la déforestation </b> 
