--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <br class="clearfix" />
         <div class="row">
 	<div class="row_info">
-<div class="line1"> Nicolas Mondolfo, Antoine Leblois, Philippe Delacote, Léa Tardieu, <!-- (2024) --> <b>Urban planning decisions expose Traveller sites to disproportionate environmental burdens</b>,
+<div class="line1"> N. Mondolfo, A. Leblois, P. Delacote, L. Tardieu, <!-- (2024) --> <b>Urban planning decisions expose Traveller sites to disproportionate environmental burdens</b>,
 			<!--<i>Environmental Modelling and Assessment</i>,  <b></b>, --> 2025, <i>Nature Cities</i>. </div>
 			</div>
 			<!--<div class="row_download">
