--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         <div class="row">
 	<div class="row_info">
 <div class="line1"> N. Mondolfo, A. Leblois, P. Delacote, L. Tardieu, <!-- (2024) --> <b>Urban planning decisions expose Traveller sites to disproportionate environmental burdens</b>,
-			<!--<i>Environmental Modelling and Assessment</i>,  <b></b>, --> 2025, <i>Nature Cities</i>. </div>
-			</div>
+			<!--<i>Environmental Modelling and Assessment</i>,  <b></b>, --> 2025, <i>Nature Cities</i>. <a href="https://doi.org/10.57745/G1LWND"> Data </a> &amp; <a href="Zenodo at https://doi.org/10.5281/
+zenodo.15518253"> replication code. </a> </div>
 			<!--<div class="row_download">
 			<div class="download_text">Download</div><div class="french"><a href="https://www.sciencedirect.com/science/article/pii/S0095069623000372">Paper</a></div>  
 			</div>   -->
