--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 <div class="line1"> N. Mondolfo, A. Leblois, P. Delacote, L. Tardieu, <!-- (2024) --> <b>Urban planning decisions expose Traveller sites to disproportionate environmental burdens</b>,
 			<!--<i>Environmental Modelling and Assessment</i>,  <b></b>, --> 2025, <i>Nature Cities</i>. <a href="https://doi.org/10.57745/G1LWND"> Data </a> &amp; <a href="Zenodo at https://doi.org/10.5281/
 zenodo.15518253"> replication code. </a> </div>
+</div>
 			<!--<div class="row_download">
 			<div class="download_text">Download</div><div class="french"><a href="https://www.sciencedirect.com/science/article/pii/S0095069623000372">Paper</a></div>  
 			</div>   -->
@@ -135,7 +136,8 @@ zenodo.15518253"> replication code. </a> </div>
 			<div class="download_text"> & </div>
 <div class="french"><a href="http://antoine.leblois.free.fr/CMP_PNAS_Desbureaux_al_2024_Accepted_Version.pdf"> Pre-print</a></div>
 </div>
-			
+						<!-- Nenwala, V.H., Knops, C., Njouenwet, I. et al. Spatiotemporal relationships between rainfall indices and crop yields in the Sudano-Sahelian zone of Cameroon. Theor Appl Climatol 156, 469 (2025). 
+			 https://link.springer.com/article/10.1007/s00704-025-05603-y -->
 		</div>
 		<br>	
 <br class="clearfix" />
