--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
         <div class="row">
 	<div class="row_info">
 <div class="line1"> N. Mondolfo, A. Leblois, P. Delacote, L. Tardieu, <!-- (2024) --> <b>Urban planning decisions expose Traveller sites to disproportionate environmental burdens</b>,
-			<!--<i>Environmental Modelling and Assessment</i>,  <b></b>, --> 2025, <i>Nature Cities</i>. <a href="https://doi.org/10.57745/G1LWND"> Data </a> &amp; <a href="Zenodo at https://doi.org/10.5281/
-zenodo.15518253"> replication code. </a> </div>
+			<!--<i>Environmental Modelling and Assessment</i>,  <b></b>, --> 2025, <i>Nature Cities</i>. <a href="https://doi.org/10.57745/G1LWND"> Data </a> &amp; <a href="https://doi.org/10.5281/zenodo.15518253"> replication code. </a> </div>
 </div>
 			<!--<div class="row_download">
 			<div class="download_text">Download</div><div class="french"><a href="https://www.sciencedirect.com/science/article/pii/S0095069623000372">Paper</a></div>  
@@ -470,9 +469,10 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 		<br> -->
 					<div class="row">
 			<div class="row_info">
-				<div class="line1"> <b> Près des autoroutes et des déchetteries : les gens du voyage face aux injustices environnementales </b> <br>with N. Mondolfo, L. Tardieu and P. Delacote, <i>The conversation</i> (fr), 2025.</div>
-				<div class="line2"> --> <a href="https://theconversation.com/pres-des-autoroutes-et-des-dechetteries-les-gens-du-voyage-face-aux-injustices-environnementales-258636"> Link to the publication</a> </div>
-							<div class="line2"> --> <a href="https://www.radiofrance.fr/franceculture/podcasts/avec-sciences/les-gens-du-voyage-victimes-des-injustices-environnementales-3679850"> Podcast: La Science, CQFD, Fr. Culture, 28 aout 2025 (fr) </a> </div>
+			<div class="line1"> <b> Près des autoroutes et des déchetteries : les gens du voyage face aux injustices environnementales </b> <br>with N. Mondolfo, L. Tardieu and P. Delacote, <i>The conversation</i> (fr), 2025.</div>
+			<div class="line2"> --> <a href="https://theconversation.com/pres-des-autoroutes-et-des-dechetteries-les-gens-du-voyage-face-aux-injustices-environnementales-258636"> Link to the publication</a> </div>
+			<div class="line2"> --> <a href="https://www.radiofrance.fr/franceculture/podcasts/avec-sciences/les-gens-du-voyage-victimes-des-injustices-environnementales-3679850"> Podcast: La Science, CQFD, Fr. Culture, 28 aout 2025 (fr) </a> </div>
+			<div class="line2"> --> <a href="https://reporterre.net/Le-racisme-d-elus-locaux-expose-les-gens-du-voyage-a-la-pollution"> Article reporterre, 27 aout 2025 (fr) </a> </div>
 			</div>
 	</div>
 			<div class="row">
