--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ Afrique de l'Ouest : services climatiques et assurances indicielles</b>, in FAIR
 					<div class="row">
 			<div class="row_info">
 			<div class="line1"> <b> Près des autoroutes et des déchetteries : les gens du voyage face aux injustices environnementales </b> <br>with N. Mondolfo, L. Tardieu and P. Delacote, <i>The conversation</i> (fr), 2025.</div>
-			<div class="line2"> --> <a href="https://theconversation.com/pres-des-autoroutes-et-des-dechetteries-les-gens-du-voyage-face-aux-injustices-environnementales-258636"> Link to the publication</a> </div>
+			<div class="line2"> --> <a href="https://theconversation.com/pres-des-autoroutes-et-des-dechetteries-les-gens-du-voyage-face-aux-injustices-environnementales-258636"> The Conversation </a> </div>
 			<div class="line2"> --> <a href="https://www.radiofrance.fr/franceculture/podcasts/avec-sciences/les-gens-du-voyage-victimes-des-injustices-environnementales-3679850"> Podcast: La Science, CQFD, Fr. Culture, 28 aout 2025 (fr) </a> </div>
 			<div class="line2"> --> <a href="https://reporterre.net/Le-racisme-d-elus-locaux-expose-les-gens-du-voyage-a-la-pollution"> Article reporterre, 27 aout 2025 (fr) </a> </div>
 			</div>
